--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/vip-theme.css">
   <title>Dolphin Wallet Finder</title>
 
  <!-- Link to Manifest -->
@@ -125,7 +126,7 @@
 }
   </style>
 </head>
-<body>
+<body class="theme-gold">
   <div class="radar">
     <canvas id="radarGrid"></canvas>
     <canvas id="radarSweep"></canvas>
@@ -226,5 +227,6 @@
   </script>
 </body>
 </html>
+
 
 
