--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Dolphin Wallet Finder</title>
 
  <!-- Link to Manifest -->
-  <link rel="manifest" href="/dolphinwalletfinder/manifest.json" />
+  <link rel="manifest" href="/vip/manifest.json" />
 
   <style>
   :root{
@@ -91,7 +91,7 @@
     letter-spacing:.35px;
     text-transform:uppercase;
     color:#fff;
-    background:#0088cc; /* رنگ تلگرام */
+    background:#0088cc; 
     box-shadow:0 24px 50px rgba(0,136,204,.35);
     cursor:pointer;
     transition:transform .15s ease, opacity .3s ease;
@@ -170,7 +170,7 @@
           </div>
 
           <div class="actions">
-            <a class="btn-big" href="https://dolphinwalletfinder.github.io/dolphinwalletfinder/pages/login.html">
+            <a class="btn-big" href="https://dolphinwalletfinder.github.io/vip/pages/login.html">
               🚀 Join Now
             </a>
             <a class="btn-telegram" href="https://t.me/DolphinwalletFinderGlobal" target="_blank">
@@ -227,6 +227,7 @@
   </script>
 </body>
 </html>
+
 
 
 
