--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
  <!-- Link to Manifest -->
   <link rel="manifest" href="/vip/manifest.json" />
- <link rel="stylesheet" href="../assets/vip-theme.css">
+ <link rel="stylesheet" href="assets/vip-theme.css">
   <style>
   :root{
     --c1:#0ff1e7; --c2:#35a7ff; --c3:#14ff89;
@@ -226,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
