--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"/>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"/>
+<link rel="stylesheet" href="../assets/vip-theme.css">
 <style>
   :root{ --bg:#070b14; --c1:#0ff1e7; --c2:#35a7ff; --c3:#14ff89; --grid:#0e1628; --panel:rgba(10,16,26,.70); --panel2:rgba(6,12,20,.60) }
   *{box-sizing:border-box}
@@ -97,7 +98,7 @@
 
 </style>
 </head>
-<body>
+<body class="theme-gold">
   <main class="stage">
     <section class="hud" role="main" aria-labelledby="brandTitle">
       <aside class="brand">
