--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Profile — Dolphin Wallet Finder</title>
-
+  <link rel="stylesheet" href="../assets/vip-theme.css">
   <style>
   :root{
     --c1:#0ff1e7; --c2:#35a7ff; --c3:#14ff89;
@@ -140,8 +140,7 @@
 
 </style>
 </head>
-<body>
-
+<body class="theme-gold">
   <div class="radar" aria-hidden="true">
     <canvas id="bg"></canvas>
   </div>
@@ -158,7 +157,7 @@
 
           <div>
             <div class="title">Dolphin Wallet Finder</div>
-            <p class="kicker">Manage your wallet, license, and actions in one place.</p>
+            <p class="kicker">Manage your wallet and actions in one place.</p>
           </div>
         </div>
       </aside>
@@ -169,7 +168,7 @@
         <div class="pane-inner">
           <header class="hero">
             <h2>👤 My Profile</h2>
-            <p>Your account overview and license status. Data refreshes automatically.</p>
+            <p>Your account overview. Final TX status refreshes automatically.</p>
           </header>
 
           <!-- Quick stats -->
@@ -177,7 +176,7 @@
             <div class="stat"><div class="n" id="statUser">—</div><div class="l">Username</div></div>
             <div class="stat"><div class="n" id="statNetwork">—</div><div class="l">Network</div></div>
             <div class="stat"><div class="n" id="statBalance">—</div><div class="l">Balance</div></div>
-            <div class="stat"><div class="n" id="statLicense">—</div><div class="l">License</div></div>
+            <div class="stat"><div class="n" id="statLicense">—</div><div class="l">Final TX</div></div>
           </div>
 
           <section class="grid">
@@ -212,21 +211,20 @@
 
             <!-- License block -->
             <div class="card col">
-              <h3>License</h3>
+              <h3>Final Transaction</h3>
               <div class="table">
                 <div class="row">
-                  <div class="cell-label">Status</div>
+                  <div class="cell-label">Final TX Status</div>
                   <div class="cell-value" id="licenseStatus">Checking…</div>
                 </div>
                 <div class="row">
-                  <div class="cell-label">Transaction Hash (TXID)</div>
+                  <div class="cell-label">Final TX Hash (TXID)</div>
                   <div class="cell-value" id="licenseTx">—</div>
                 </div>
               </div>
 
               <div class="actions">
                 <button class="btn" id="withdrawBtn" disabled>Withdraw Assets</button>
-                <button class="btn-ghost" id="activateBtn">Activate / Renew</button>
               </div>
               <div class="helper" id="licenseMsg"></div>
             </div>
@@ -238,71 +236,71 @@
   </main>
 
   <script>
-    // ===== Config =====
-    const API_BASE_URL = "https://web-production-b86d.up.railway.app/api";
+  // ===== Config =====
+  const API_BASE_URL = "https://web-production-b86d.up.railway.app/api";
 
-    // ===== Auth gate =====
-    const token = localStorage.getItem("token");
-    if (!token) {
-      alert("Please log in first.");
-      window.location.href = "login.html";
-    }
+  // ===== Auth gate =====
+  const token = localStorage.getItem("token");
+  if (!token) {
+    alert("Please log in first.");
+    window.location.href = "login.html";
+  }
 
-    // ===== Elements =====
-    const els = {
-      statUser: document.getElementById("statUser"),
-      statNetwork: document.getElementById("statNetwork"),
-      statBalance: document.getElementById("statBalance"),
-      statLicense: document.getElementById("statLicense"),
+  // ===== Elements =====
+  const els = {
+    statUser: document.getElementById("statUser"),
+    statNetwork: document.getElementById("statNetwork"),
+    statBalance: document.getElementById("statBalance"),
+    statLicense: document.getElementById("statLicense"),
 
-      username: document.getElementById("username"),
-      walletAddress: document.getElementById("walletAddress"),
-      walletBalance: document.getElementById("walletBalance"),
-      walletNetwork: document.getElementById("walletNetwork"),
-      profileMsg: document.getElementById("profileMsg"),
+    username: document.getElementById("username"),
+    walletAddress: document.getElementById("walletAddress"),
+    walletBalance: document.getElementById("walletBalance"),
+    walletNetwork: document.getElementById("walletNetwork"),
+    profileMsg: document.getElementById("profileMsg"),
 
-      licenseStatus: document.getElementById("licenseStatus"),
-      licenseTx: document.getElementById("licenseTx"),
-      licenseMsg: document.getElementById("licenseMsg"),
+    licenseStatus: document.getElementById("licenseStatus"),
+    licenseTx: document.getElementById("licenseTx"),
+    licenseMsg: document.getElementById("licenseMsg"),
 
-      withdrawBtn: document.getElementById("withdrawBtn"),
-      activateBtn: document.getElementById("activateBtn"),
-      copyWallet: document.getElementById("copyWallet"),
-      refreshBtn: document.getElementById("refreshBtn"),
-      logoutBtn: document.getElementById("logoutBtn"),
-      goDashboard: document.getElementById("goDashboard"),
-    };
+    withdrawBtn: document.getElementById("withdrawBtn"),
+    activateBtn: document.getElementById("activateBtn"),
+    copyWallet: document.getElementById("copyWallet"),
+    refreshBtn: document.getElementById("refreshBtn"),
+    logoutBtn: document.getElementById("logoutBtn"),
+    goDashboard: document.getElementById("goDashboard"),
+  };
 
-    // ===== UI helpers =====
-    function maskAddress(addr){
-      if(!addr || addr.length < 12) return addr || "N/A";
-      return addr.slice(0,6) + "••••••••" + addr.slice(-4);
-    }
-    function setStat(el, val){ el.textContent = val ?? "—"; }
+  // ===== UI helpers =====
+  function maskAddress(addr){
+    if(!addr || addr.length < 12) return addr || "N/A";
+    return addr.slice(0,6) + "••••••••" + addr.slice(-4);
+  }
+  function setStat(el, val){ el.textContent = val ?? "—"; }
 
-    // ===== Data loaders =====
-    async function loadProfile(){
-      els.profileMsg.textContent = "Loading wallet…";
-      try{
-        const res = await fetch(`${API_BASE_URL}/my-wallet`, {
-          headers: { "Authorization": "Bearer " + token }
-        });
-        const data = await res.json();
+  // ===== Data loaders =====
+  async function loadProfile(){
+    els.profileMsg.textContent = "Loading wallet…";
+    try{
+      const res = await fetch(`${API_BASE_URL}/my-wallet`, {
+        headers: { "Authorization": "Bearer " + token }
+      });
+      const data = await res.json();
 
-        const username = localStorage.getItem("username") || "Unknown";
-        setStat(els.statUser, username);
-        els.username.textContent = username;
+      const username = localStorage.getItem("username") || "Unknown";
+      setStat(els.statUser, username);
+      els.username.textContent = username;
 
-        if(data && data.wallet){
-          const w = data.wallet;
-          els.walletAddress.textContent = maskAddress(w.address);
-          els.walletBalance.textContent = w.balance ?? "N/A";
-          els.walletNetwork.textContent = w.network ?? "N/A";
+      if(data && data.wallet){
+        const w = data.wallet;
+        els.walletAddress.textContent = maskAddress(w.address);
+        els.walletBalance.textContent = w.balance ?? "N/A";
+        els.walletNetwork.textContent = w.network ?? "N/A";
 
-          setStat(els.statBalance, w.balance ?? "N/A");
-          setStat(els.statNetwork, w.network ?? "N/A");
+        setStat(els.statBalance, w.balance ?? "N/A");
+        setStat(els.statNetwork, w.network ?? "N/A");
 
-          if (els.copyWallet && w.address){
+        if (els.copyWallet && w.address){
           els.copyWallet.onclick = () => {
             if(!w.address){ return; }
             navigator.clipboard.writeText(w.address).then(()=>{
@@ -310,95 +308,100 @@
               setTimeout(()=> els.profileMsg.textContent = "", 1200);
             });
           };
-          }
-        }else{
-          els.walletAddress.textContent = "N/A";
-          els.walletBalance.textContent = "N/A";
-          els.walletNetwork.textContent = "N/A";
         }
-        els.profileMsg.textContent = "";
-      }catch(e){
-        els.profileMsg.textContent = "";
+      }else{
+        els.walletAddress.textContent = "N/A";
+        els.walletBalance.textContent = "N/A";
+        els.walletNetwork.textContent = "N/A";
       }
+      els.profileMsg.textContent = "";
+    }catch(e){
+      els.profileMsg.textContent = "";
     }
+  }
 
-    async function loadLicense(){
-      els.licenseMsg.textContent = "Checking license…";
-      try{
-        const res = await fetch(`${API_BASE_URL}/license/status`, {
-          headers: { "Authorization": "Bearer " + token }
-        });
-        const data = await res.json();
+  // ===== Final TX =====
+  async function loadFinalTx(){
+    els.licenseMsg.textContent = "Checking final transaction…";
+    try{
+      const res = await fetch(`${API_BASE_URL}/final-tx`, {
+        headers: { "Authorization": "Bearer " + token }
+      });
+      const data = await res.json();
 
-        if(data && data.tx_hash){
-          els.licenseTx.textContent = data.tx_hash;
-        } else {
-          els.licenseTx.textContent = "N/A";
-        }
+      const txHash = data?.tx_hash || data?.hash || "";
+      const status  = data?.status || ""; // expected: "approved" | "pending" | ...
 
-        if(data && data.license === "active"){
-          els.licenseStatus.textContent = "✅ Approved";
-          setStat(els.statLicense, "Active");
-          els.withdrawBtn.disabled = false;
-          els.withdrawBtn.onclick = () => window.location.href = "transaction.html";
-          els.licenseMsg.textContent = "";
-        } else if (data && data.license === "pending"){
-          els.licenseStatus.textContent = "⏳ Waiting for approval";
-          setStat(els.statLicense, "Pending");
-          els.withdrawBtn.disabled = true;
-          els.licenseMsg.textContent = "Admin approval required to withdraw.";
-        } else {
-          els.licenseStatus.textContent = "❌ License Pending";
-          setStat(els.statLicense, "Pending");
-          els.withdrawBtn.disabled = true;
-          els.licenseMsg.textContent = "⏳ Waiting for approval";
-        }
-      }catch(e){
-        els.licenseStatus.textContent = "❌ Error checking status";
-        els.licenseTx.textContent = "N/A";
+      els.licenseTx.textContent = txHash || "—";
+
+      if (status === "approved") {
+        els.licenseStatus.textContent = "✅ Final TX approved";
+        setStat(els.statLicense, "Approved");
+        els.withdrawBtn.disabled = false;
+        els.withdrawBtn.onclick = () => window.location.href = "transaction.html";
+        els.licenseMsg.textContent = "";
+      } else if (status === "pending") {
+        els.licenseStatus.textContent = "⏳ Waiting for final TX approval";
+        setStat(els.statLicense, "Pending");
         els.withdrawBtn.disabled = true;
-        els.licenseMsg.textContent = "An error occurred while loading license data.";
+        els.licenseMsg.textContent = "Submit your final transaction hash in the fee page, then wait for approval.";
+      } else {
+     
+        els.licenseStatus.textContent = "—";
+        setStat(els.statLicense, "—");
+        els.withdrawBtn.disabled = true;
+        els.licenseMsg.textContent = "No final transaction found. Please submit your TX hash on the fee page.";
       }
+
+      if (els.activateBtn) els.activateBtn.style.display = "none";
+
+    }catch(e){
+      els.licenseStatus.textContent = "❌ Error loading final TX";
+      els.licenseTx.textContent = "—";
+      setStat(els.statLicense, "—");
+      els.withdrawBtn.disabled = true;
+      if (els.activateBtn) els.activateBtn.style.display = "none";
+      els.licenseMsg.textContent = "Try again later.";
     }
+  }
 
-    // ===== Actions =====
-    els.refreshBtn.onclick = () => { loadProfile(); loadLicense(); };
-    els.logoutBtn.onclick = () => {
-      localStorage.removeItem("token");
-      localStorage.removeItem("username");
-      window.location.href = "login.html";
-    };
-    els.activateBtn.onclick = () => window.location.href = "license.html";
+  // ===== Actions =====
+  els.refreshBtn.onclick = () => { loadProfile(); loadFinalTx(); };
+  els.logoutBtn.onclick = () => {
+    localStorage.removeItem("token");
+    localStorage.removeItem("username");
+    window.location.href = "login.html";
+  };
 
-    // ===== Init: load immediately + poll =====
-    loadProfile();
-    loadLicense();
-    setInterval(loadLicense, 7000);
+  // ===== Init: load immediately + (optional) poll =====
+  loadProfile();
+  loadFinalTx();
+  setInterval(loadFinalTx, 7000);
 
-    // ===== Decorative radar background =====
-    const c = document.getElementById('bg');
-    if (c && c.getContext) {
-      const ctx = c.getContext('2d');
-      const dpr = window.devicePixelRatio || 1;
-      function resize(){ c.width = innerWidth*dpr; c.height = innerHeight*dpr; }
-      resize(); addEventListener('resize', resize);
-      let t=0;
-      (function loop(){
-        ctx.clearRect(0,0,c.width,c.height);
-        ctx.globalAlpha = 0.08;
-        for(let i=0;i<24;i++){
-          const r = (Math.min(c.width,c.height)/3) * (i/24);
-          ctx.beginPath();
-          ctx.arc(c.width/2, c.height/2, r + Math.sin(t/25+i)*8*dpr, 0, Math.PI*2);
-          ctx.strokeStyle = `rgba(64,203,255,0.35)`;
-          ctx.lineWidth = 1*dpr;
-          ctx.setLineDash([8*dpr, 10*dpr]);
-          ctx.stroke();
-        }
-        ctx.setLineDash([]);
-        t++; requestAnimationFrame(loop);
-      })();
-    }
-  </script>
+  // ===== Decorative radar background =====
+  const c = document.getElementById('bg');
+  if (c && c.getContext) {
+    const ctx = c.getContext('2d');
+    const dpr = window.devicePixelRatio || 1;
+    function resize(){ c.width = innerWidth*dpr; c.height = innerHeight*dpr; }
+    resize(); addEventListener('resize', resize);
+    let t=0;
+    (function loop(){
+      ctx.clearRect(0,0,c.width,c.height);
+      ctx.globalAlpha = 0.08;
+      for(let i=0;i<24;i++){
+        const r = (Math.min(c.width,c.height)/3) * (i/24);
+        ctx.beginPath();
+        ctx.arc(c.width/2, c.height/2, r + Math.sin(t/25+i)*8*dpr, 0, Math.PI*2);
+        ctx.strokeStyle = `rgba(64,203,255,0.35)`;
+        ctx.lineWidth = 1*dpr;
+        ctx.setLineDash([8*dpr, 10*dpr]);
+        ctx.stroke();
+      }
+      ctx.setLineDash([]);
+      t++; requestAnimationFrame(loop);
+    })();
+  }
+</script>
 </body>
 </html>
