--- a/pages/success.html
+++ b/pages/success.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Transaction Status — Dolphin Wallet Finder</title>
+   <link rel="stylesheet" href="../assets/vip-theme.css">
   <style>
   :root{
     --c1:#0ff1e7; --c2:#35a7ff; --c3:#14ff89;
@@ -88,7 +89,7 @@
   @keyframes spin{ to{ transform:rotate(1turn) } }
   </style>
 </head>
-<body>
+<body class="theme-gold">
   <div class="radar" aria-hidden="true"></div>
 
   <main class="stage">
