--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           </div>
 
           <div class="actions">
-            <a class="btn-big" href="https://dolphinwalletfinder.github.io/vip/pages/login.html">
+           <a class="cta btn-now" href="https://dolphinwalletfinder.github.io/vip/pages/login.html">
               <span class="icon" aria-hidden="true">🚀</span> Join Now
             </a>
             <a class="cta btn-telegram" href="https://t.me/DolphinwalletFinderGlobal" target="_blank" rel="noopener">
@@ -660,4 +660,5 @@ if ('serviceWorker' in navigator) {
 </body>
 
 </html>
+
 
