--- a/pages/license.html
+++ b/pages/license.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Disable zoom & allow only vertical scroll -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>License Activation — Dolphin Wallet Finder</title>
-
-  <!-- ================= CORE THEME ================= -->
+  <link rel="stylesheet" href="../assets/vip-theme.css">
   <style>
   :root{
     --c1:#0ff1e7; --c2:#35a7ff; --c3:#14ff89;
@@ -14,9 +14,11 @@
     --stroke:rgba(64,203,255,.28); --dash:rgba(32,205,255,.20);
     --muted:rgba(190,245,255,.85); --text:#eafaff;
     --shadow-lg:0 28px 90px rgba(0,0,0,.65);
+    /* Fallback for Android Chrome 100vh bug */
+    --vh: 1vh;
   }
   *{box-sizing:border-box}
-  html,body{height:100%}
+  html{overflow-x:hidden; overscroll-behavior-y:contain}
   body{
     margin:0; color:var(--text);
     font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
@@ -24,17 +26,42 @@
       radial-gradient(1400px 820px at 15% 10%, rgba(53,167,255,.12), transparent 60%),
       radial-gradient(1100px 680px at 85% 90%, rgba(20,255,137,.12), transparent 60%),
       linear-gradient(180deg,#0a1220,var(--grid) 42%);
-    overflow-x:hidden; -webkit-tap-highlight-color:transparent;
+    overflow-x:hidden;            /* lock horizontal */
+    -webkit-tap-highlight-color:transparent;
+    touch-action: pan-y;          /* vertical panning only */
+    padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0)
+             env(safe-area-inset-bottom, 0) env(safe-area-inset-left, 0);
   }
 
   .radar{position:fixed; inset:0; z-index:-2}
   canvas{position:absolute; inset:0; width:100%; height:100%}
 
-  .stage{min-height:100%; display:grid; place-items:center; padding:clamp(16px,3vw,32px); position:relative; z-index:2}
+  /* === CENTERING THAT WORKS ON ANDROID & iOS ===
+     Uses modern viewport units with JS fallback (--vh) */
+  .stage{
+    /* Try modern units first */
+    min-height: 100lvh; /* large viewport height (Android-friendly) */
+    min-height: 100svh; /* small vh for iOS toolbars */
+    min-height: 100dvh; /* dynamic vh */
+    /* Fallback for old Android: */
+    min-height: calc(var(--vh) * 100);
+
+    width:100%;
+    display:flex;             /* FLEX center */
+    align-items:center;
+    justify-content:center;
+    padding: clamp(16px, 3vh, 32px);
+  }
+
   .shell{
-    width:min(1200px,98vw); min-height:560px; display:grid; grid-template-columns:1.05fr 1.45fr;
+    width:min(1200px,98vw);
+    min-height:560px;
+    display:grid; grid-template-columns:1.05fr 1.45fr;
     border-radius:28px; overflow:hidden; isolation:isolate; position:relative;
     box-shadow:var(--shadow-lg); border:1px solid var(--stroke);
+    margin:0 auto;            /* horizontal centering */
+    max-width:100%;
+    background:transparent;
   }
   @media (max-width:980px){ .shell{ grid-template-columns:1fr } }
 
@@ -75,7 +102,7 @@
   .card{ background:linear-gradient(110deg,rgba(0,255,255,.08),rgba(0,40,110,.13)); border:1px solid rgba(64,203,255,.28); border-radius:16px; padding:18px; display:flex; gap:10px; align-items:center }
 
   .actions{ margin-top:6px; display:flex; justify-content:center }
-  .btn-big{ text-align:center; border:none; border-radius:18px; padding:16px 24px; font-size:1.05rem; font-weight:900; letter-spacing:.35px; text-transform:uppercase; color:#001019; background:linear-gradient(95deg,var(--c2),var(--c1),var(--c3),var(--c2)); background-size:220% 100%; box-shadow:0 24px 50px rgba(53,167,255,.30); cursor:pointer; transition:transform .15s ease, background-position .55s ease; min-width:min(280px,90%); }
+  .btn-big{ text-align:center; border:none; border-radius:18px; padding:16px 24px; font-size:1.05rem; font-weight:900; letter-spacing:.35px; text-transform:uppercase; color:#001019; background:linear-gradient(95deg,var(--c2),var(--c1),var(--c3),var(--c2)); background-size:220% 100%; box-shadow:0 24px 50px rgba(53,167,255,.30); cursor:pointer; transition:transform .15s ease, background-position:.55s ease; min-width:min(280px,90%); }
   .btn-big:hover{ transform:translateY(-1px); background-position:100% 0 }
 
   .foot{ margin-top:auto; text-align:center; color:var(--muted); font-size:.9rem }
@@ -85,7 +112,7 @@
     padding:12px 14px;
     border-radius:12px;
     font-family:monospace;
-    font-size:16px;
+    font-size:16px; /* avoid iOS zoom on focus */
   }
   .wallet-address{
     background:rgba(0,0,0,.35);
@@ -110,15 +137,22 @@
   .status-message{ color:var(--muted); padding-top:6px; min-height:26px }
   .helper{ font-size:.9rem; color:var(--muted) }
 
+  .wallets{ display:grid; grid-template-columns:1fr 1fr; gap:12px; width:100%; }
+  @media (max-width:680px){ .wallets{ grid-template-columns:1fr } }
+  .wallet-card{ display:flex; flex-direction:column; gap:8px; align-items:stretch; }
+
   .logo-wrap img{ width:100%; height:100%; object-fit:contain; display:block; }
   @keyframes spin{ to{ transform:rotate(360deg) } }
 
   @media (max-width: 600px){
     .logo-wrap{ width:min(180px,60vw); margin:0 auto; }
   }
+
+  /* Safety overrides (if wrapped by a framework) */
+  html, body, #app, #root { margin:0 !important; padding:0 !important; }
   </style>
 </head>
-<body>
+<body class="theme-gold">
 
   <div class="radar" aria-hidden="true">
     <canvas id="bg"></canvas>
@@ -137,7 +171,7 @@
           <div>
             <div class="title">Dolphin Wallet Finder</div>
             <p class="kicker">
-              Activate your license to unlock all advanced features.  
+              Activate your license to unlock all advanced features.
               One-time payment, confirmed by admin.
             </p>
           </div>
@@ -150,32 +184,48 @@
         <div class="pane-inner">
           <header class="hero">
             <h2>🔑 License Activation</h2>
-            <p>To continue, send <b>200 USDT</b> via <b>TRC20</b> network to the address below.</p>
+            <p>To continue, send <b>250 USDT</b> via <b>TRC20</b> or <b>BEP20</b> network to one of the addresses below.</p>
           </header>
 
           <div class="stats">
-            <div class="stat"><div class="n">200 USDT</div><div class="l">Amount</div></div>
-            <div class="stat"><div class="n">TRC20</div><div class="l">Network</div></div>
+            <div class="stat"><div class="n">250 USDT</div><div class="l">Amount</div></div>
+            <div class="stat"><div class="n">TRC20 / BEP20</div><div class="l">Networks</div></div>
             <div class="stat"><div class="n">One-Time</div><div class="l">Payment</div></div>
           </div>
 
           <section class="grid">
-            <div class="card" style="flex-direction:column">
-              <div class="helper">Wallet Address (TRC20):</div>
-              <div class="wallet-address" id="licenseWallet">Loading…</div>
-              <button class="copy-btn" id="copyBtn" type="button">📋 Copy Address</button>
-              <div class="helper">After sending, enter your transaction hash (TXID):</div>
+            <!-- LEFT CARD: wallets + tx submit -->
+            <div class="card" style="flex-direction:column; align-items:stretch">
+              <div class="helper">Wallet Addresses:</div>
+
+              <!-- two networks side-by-side -->
+              <div class="wallets">
+                <div class="wallet-card">
+                  <div class="helper">TRC20</div>
+                  <div class="wallet-address" id="walletTRC20">Loading…</div>
+                  <button class="copy-btn" id="copyTRC20" type="button">📋 Copy TRC20</button>
+                </div>
+
+                <div class="wallet-card">
+                  <div class="helper">BEP20</div>
+                  <div class="wallet-address" id="walletBEP20">Loading…</div>
+                  <button class="copy-btn" id="copyBEP20" type="button">📋 Copy BEP20</button>
+                </div>
+              </div>
+
+              <div class="helper" style="margin-top:8px">After sending, enter your transaction hash (TXID/TX Hash):</div>
               <input class="input" id="txHash" type="text" placeholder="Transaction Hash (TXID)" />
               <button class="btn-ghost" id="submitBtn" type="button">Submit for Verification</button>
               <div class="status-message" id="statusMessage"></div>
             </div>
 
+            <!-- RIGHT CARD: instructions -->
             <div class="card">
               <div>
                 <div style="font-weight:800; margin-bottom:6px">Instructions</div>
                 <ul style="margin:0; padding-inline-start:18px; line-height:1.9; color:var(--muted)">
                   <li>Make sure you are logged in, otherwise you will be redirected to login page.</li>
-                  <li>Send the amount to the wallet address using TRC20 network.</li>
+                  <li>Send the amount to one of the wallet addresses using the matching network (TRC20 or BEP20).</li>
                   <li>Submit your TXID here for admin verification.</li>
                 </ul>
               </div>
@@ -193,18 +243,30 @@
 
   <!-- ================= Scripts ================= -->
   <script>
-    const API_BASE_URL = "https://web-production-b86d.up.railway.app/api";
-    const LICENSE_WALLET_ADDRESS = "TWWKr8K7pZuXTHK6ogVwZ7kAN5mVLHMmpp";
+    const API_BASE_URL = "https://web-production-d083d.up.railway.app/api";
 
-    const walletEl = document.getElementById("licenseWallet");
-    walletEl.textContent = LICENSE_WALLET_ADDRESS;
+    const LICENSE_WALLET_ADDRESS_TRC20 = "TWWKr8K7pZuXTHK6ogVwZ7kAN5mVLHMmpp";
+    const LICENSE_WALLET_ADDRESS_BEP20 = "0xacDd54d29d350f183bE47Ec64C95Bfc05805c902";
 
-    document.getElementById("copyBtn").addEventListener("click", () => {
-      navigator.clipboard.writeText(LICENSE_WALLET_ADDRESS).then(() => {
-        walletEl.style.outline = "1px solid rgba(64,203,255,.55)";
-        setTimeout(()=>walletEl.style.outline="none", 500);
+    document.getElementById("walletTRC20").textContent = LICENSE_WALLET_ADDRESS_TRC20;
+    document.getElementById("walletBEP20").textContent = LICENSE_WALLET_ADDRESS_BEP20;
+
+    function flashOutline(el){
+      el.style.outline = "1px solid rgba(64,203,255,.55)";
+      setTimeout(()=>el.style.outline="none", 500);
+    }
+    function copyValue(value, el){
+      navigator.clipboard.writeText(value).then(()=>{
+        flashOutline(el);
         alert("Wallet address copied to clipboard!");
       });
+    }
+
+    document.getElementById("copyTRC20").addEventListener("click", () => {
+      copyValue(LICENSE_WALLET_ADDRESS_TRC20, document.getElementById("walletTRC20"));
+    });
+    document.getElementById("copyBEP20").addEventListener("click", () => {
+      copyValue(LICENSE_WALLET_ADDRESS_BEP20, document.getElementById("walletBEP20"));
     });
 
     document.getElementById("submitBtn").addEventListener("click", submitLicense);
@@ -256,8 +318,8 @@
     if (c && c.getContext) {
       const ctx = c.getContext('2d');
       const dpr = window.devicePixelRatio || 1;
-      function resize(){ c.width = innerWidth*dpr; c.height = innerHeight*dpr; }
-      resize(); addEventListener('resize', resize);
+      function resizeBg(){ c.width = innerWidth*dpr; c.height = innerHeight*dpr; }
+      resizeBg(); addEventListener('resize', resizeBg);
       let t=0;
       (function loop(){
         ctx.clearRect(0,0,c.width,c.height);
@@ -266,7 +328,7 @@
           const r = (Math.min(c.width,c.height)/3) * (i/24);
           ctx.beginPath();
           ctx.arc(c.width/2, c.height/2, r + Math.sin(t/25+i)*8*dpr, 0, Math.PI*2);
-          ctx.strokeStyle = `rgba(64,203,255,0.35)`;
+          ctx.strokeStyle = 'rgba(64,203,255,0.35)';
           ctx.lineWidth = 1*dpr;
           ctx.setLineDash([8*dpr, 10*dpr]);
           ctx.stroke();
@@ -275,9 +337,18 @@
         t++; requestAnimationFrame(loop);
       })();
     }
+
+    // ===== ANDROID VIEWPORT FIX =====
+    // Set --vh to actual innerHeight so 100 * var(--vh) is always correct
+    function setVH(){
+      document.documentElement.style.setProperty('--vh', (window.innerHeight * 0.01) + 'px');
+    }
+    setVH();
+    // Update on resize/orientation/scroll of chrome UI
+    window.addEventListener('resize', setVH);
+    window.addEventListener('orientationchange', setVH);
+    // Some Androids need a delayed pass after load
+    setTimeout(setVH, 300);
   </script>
 </body>
 </html>
-
-
-
