--- a/pages/server-fee.html
+++ b/pages/server-fee.html
@@ -6,6 +6,7 @@
   <!-- App-like viewport: no pinch/double-tap zoom, safe-area support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <title>Server Fee — Dolphin Wallet Finder</title>
+  <link rel="stylesheet" href="../assets/vip-theme.css">
   <style>
   :root{
     --c1:#0ff1e7; --c2:#35a7ff; --c3:#14ff89;
@@ -129,7 +130,7 @@
   @keyframes spin{ to{ transform:rotate(1turn) } }
   </style>
 </head>
-<body>
+<body class="theme-gold">
   <div class="radar" aria-hidden="true"></div>
 
   <main class="stage">
@@ -306,3 +307,4 @@
 </script>
 </body>
 </html>
+
