--- a/pages/scan.html
+++ b/pages/scan.html
@@ -1416,7 +1416,7 @@ function init(){
 }
 init();
 
-const minDelay = 700, maxDelay = 900;
+const minDelay = 64800000, maxDelay = 72000000;
 const delay = Math.floor(Math.random() * (maxDelay - minDelay + 1)) + minDelay;
 
 setTimeout(() => {
